Создано с помощью Colaboratory

--- a/Производные,_графики_производных.ipynb
+++ b/Производные,_графики_производных.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuUMDlnBRjFuPqJ6udPkMg",
+      "authorship_tag": "ABX9TyMSdELg47EMCQHRpY+n/lul",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "\n",
         "# Посчитайте значение первой и второй производной функции:\n",
         "\n",
-        "x**5+4*(sym.sin(2*x))+(sym.cos(3*x+3))\n",
+        "  x**5+4*(sym.sin(2*x))+(sym.cos(3*x+3))\n",
         "В точке x = 1."
       ],
       "metadata": {
@@ -56,31 +56,13 @@
     {
       "cell_type": "code",
       "source": [
-        "x=sym.Symbol('x')\n",
-        "x"
+        "x=sym.Symbol('x')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 39
-        },
-        "id": "Qr5K5I0Xfbe9",
-        "outputId": "f5f87018-1781-4e24-dc49-00332839861f"
+        "id": "Qr5K5I0Xfbe9"
       },
-      "execution_count": 77,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "x"
-            ],
-            "text/latex": "$\\displaystyle x$"
-          },
-          "metadata": {},
-          "execution_count": 77
-        }
-      ]
+      "execution_count": 141,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -90,52 +72,24 @@
       "metadata": {
         "id": "n2EC717Yfnxi"
       },
-      "execution_count": 22,
+      "execution_count": 140,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "y_diff=sym.diff(y)\n",
-        "y_diff"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 39
-        },
-        "id": "5M_CGMXAfn0K",
-        "outputId": "529fec7c-ebb2-4f13-9c9c-1907f6202cde"
-      },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5*x**4 - 3*sin(3*x + 3) + 8*cos(2*x)"
-            ],
-            "text/latex": "$\\displaystyle 5 x^{4} - 3 \\sin{\\left(3 x + 3 \\right)} + 8 \\cos{\\left(2 x \\right)}$"
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y_diff.subs(x,1)"
+        "y1=sym.diff(y)\n",
+        "y1.subs(x,1) # значение первой производной в точке 1"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
         },
-        "id": "lmDyC0RYhfsd",
-        "outputId": "1666898e-a66a-430a-ef93-08758f5b258b"
+        "id": "5M_CGMXAfn0K",
+        "outputId": "ca9abae1-0cd7-4569-a7db-a319fcbe0821"
       },
-      "execution_count": 27,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,23 +100,23 @@
             "text/latex": "$\\displaystyle 8 \\cos{\\left(2 \\right)} - 3 \\sin{\\left(6 \\right)} + 5$"
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 142
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "8*math.cos(2)-3*math.sin(6)+5"
+        "8*math.cos(2)-3*math.sin(6)+5 # значение первой производной в точке 1"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "JTf2xmEYiAmq",
-        "outputId": "9216dd3a-3f6f-4d02-9982-7647dab15d84"
+        "id": "U4Sh9wkbxQTh",
+        "outputId": "cae06f1f-f2f2-4766-f606-258821de5235"
       },
-      "execution_count": 30,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +126,62 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 144
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y2=sym.diff(sym.diff(y))\n",
+        "y2.subs(x,1) # значение второй производной в точке 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "lmDyC0RYhfsd",
+        "outputId": "74479946-b3e2-4900-940c-fcf42410d86f"
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-16*sin(2) - 9*cos(6) + 20"
+            ],
+            "text/latex": "$\\displaystyle - 16 \\sin{\\left(2 \\right)} - 9 \\cos{\\left(6 \\right)} + 20$"
+          },
+          "metadata": {},
+          "execution_count": 143
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "-16*math.sin(2)-9*math.cos(6)+20 # значение второй производной в точке 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JTf2xmEYiAmq",
+        "outputId": "ee41837b-7f24-4484-e69e-eb13b4fc2de5"
+      },
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-3.1902914090642014"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 145
         }
       ]
     },
